Changed the width of the contact template. And changed the background of the scrollbar div into white. Profile dropwdown is now fixed not absolute. In the add contact template the other button is not shown with display-none.

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -10,7 +10,6 @@
 .contacts-sidebar-container {
     display: flex;
     flex-direction: column;
-    background-color: white;
     width: 456px;
     height: 100dvh;
     margin-top: 96px;
@@ -22,7 +21,10 @@
     overflow-y: auto;
     scrollbar-width: 24px;
     scrollbar-color: #a8a8a8 white;
+    background-color: white;
     margin-bottom: 20px;
+    width: 100%;
+    margin-top: -18px;
 }
 
 .contact-list {
@@ -35,7 +37,6 @@
 .contact-list-fix-container {
     position: fixed;
     top: 60px;
-    background-color: white;
     width: 430px;
     height: 160px;
     z-index: 100;
@@ -59,7 +60,7 @@
     justify-content: center;
     width: 456px;
     height: 101px;
-    z-index: 120;
+    z-index: 1;
 }
 
 .add-new-contact-btn {
@@ -158,6 +159,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 24px;
+    
 }
 
 .contacts-side-headline {
@@ -212,6 +214,7 @@
 .contacts-overlay-container.active-side-overlay {
     transform: translateX(0);
     opacity: 1;
+    width: 100%;
 }
 
 .contacts-overlay-container.hide-side-overlay {
@@ -607,6 +610,13 @@
 
 @media screen and (max-width: 1400px) {
 
+    .contacts-overlay-header {
+        display: flex;
+        width: 100%;
+        height: 120px;
+        gap: 54px;
+    }
+
     body {
         margin-bottom: 250px;
     }
@@ -620,7 +630,7 @@
 
     .close-side-contact-arrow-icon {
         display: block;
-        position: fixed;
+        position: absolute;
         top: 160px;
         right: 6vw;
         cursor: pointer;
@@ -680,6 +690,14 @@
     .contacts-right-main-container {
         display: none;
         width: 100%;
+        margin-left: 0px;
+        padding-left: 4px;
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+
+    .add-contact-cancel-btn {
+        display: none;
     }
 
     .contacts-side-headline {
@@ -692,11 +710,13 @@
         align-items: flex-start;
         flex-direction: column;
         gap: 8px;
+        width: 100%;
     }
 
     .contacts-overlay-container {
         margin-top: 50px;
         margin-left: 5px;
+        width: 100%;
     }
 
     .contacts-headline-seperator {
@@ -735,6 +755,15 @@
         margin-left: -40px;
     }
 
+    .contacts-info-container {
+        white-space: nowrap;
+        display: flex;
+        flex-direction: column;
+        width: 150px;
+        height: 88px;
+        gap: 8px;
+    }
+
     .edit-delete-contact-button {
         cursor: pointer;
         display: none;
@@ -755,6 +784,7 @@
     .contacts-content {
         display: flex;
         justify-content: center;
+        width: 100%;
     }
 
     .delete-edit-dropdown-contacts-mobile {
@@ -900,7 +930,7 @@
         left: 2.1vw;
         top: 3.5vh;
         width: 95vw;
-        height: 79vh;
+        height: 82vh;
         z-index: 4;
         border-radius: 30px;
         background-color: white;
@@ -921,12 +951,12 @@
 
     .add-contact-headline h1 {
         font-weight: 700;
-        font-size: 42px;
+        font-size: 47px;
     }
 
     .add-contact-headline h2 {
         font-weight: 400;
-        font-size: 22px;
+        font-size: 20px;
     }
 
     .add-contact-left-section-content {
@@ -942,7 +972,7 @@
     }
 
     .add-contact-underlined {
-        width: 95px;
+        width: 90px;
     }
 
     .add-contact-right-section {
@@ -950,7 +980,7 @@
         align-items: center;
         justify-content: center;
         margin-left: 0px;
-        margin-top: 130px;
+        margin-top: 100px;
     }
 
     .add-contact-right-section form {
@@ -969,12 +999,12 @@
     .add-contact-person-svg-container {
         position: fixed;
         left: 51%;
-        top: 38%;
+        top: 39%;
         transform: translateX(-50%);
         border: 3px solid white;
         box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
-        width: 110px;
-        height: 110px;
+        width: 120px;
+        height: 120px;
         background-color: #d1d1d1;
         border-radius: 100%;
     }
@@ -992,8 +1022,8 @@
         background-position: right 10px center;
         display: flex;
         justify-content: space-between;
-        width: 98.5%;
-        height: 45px;
+        width: 100%;
+        height: 41px;
         border-radius: 10px;
         border: 1px solid #d1d1d1;
         padding: 13px 21px;
@@ -1001,6 +1031,7 @@
         font-weight: 400;
         font-size: 20px;
         margin-top: 0px;
+        margin-right: 20px;
     }
 
     .add-contact-close-btn {
@@ -1036,7 +1067,8 @@
 
     .add-contact-create-contact-btn {
         cursor: pointer;
-        width: 120px;
+        width: 217px;
+        height: 51px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -1090,7 +1122,7 @@
 @media screen and (max-width: 500px) {
 
     .contacts-right-main-container {
-        margin-left: 4px;
+        margin-left: 0px;
     }
 
     .contacts-overlay-header h3 {
@@ -1125,5 +1157,12 @@
         font-weight: 700;
         font-size: 35px;
         white-space: nowrap;
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-height: 600px) {
+    .add-contact-overlay {
+        height: 90vh;
+        top: -5vh;
     }
 }
