--- a/css/header_sidebar.css
+++ b/css/header_sidebar.css
@@ -309,7 +309,7 @@ footer a:hover {
     }
 
     .user-profile-menu {
-        position: absolute;
+        position: fixed;
         z-index: 2;
         top: 80px;
         right: 80px;
@@ -363,7 +363,7 @@ footer a:hover {
         height: 80px;
         bottom: 0;
         left: 0;
-        width: 100vw;
+        width: 100%;
         padding: 0;
         margin: 0;
         box-sizing: border-box;
@@ -434,6 +434,7 @@ footer a:hover {
     header {
         display: flex;
         align-items: center;
+        width: 100%;
     }
 
     .header-logo-mobile {
